--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <main class="grid">
-      <section class="panel metrics" id="metrics-grid">
+      <section class="panel metrics span-3" id="metrics-grid">
         <article>
           <p class="metric-label">Live swarms</p>
           <p class="metric-value" id="metric-live-swarms">0</p>
@@ -38,6 +38,22 @@
         <article>
           <p class="metric-label">Blocked agents</p>
           <p class="metric-value" id="metric-blocked-agents">0</p>
+        </article>
+        <article>
+          <p class="metric-label">Queued tasks</p>
+          <p class="metric-value" id="metric-queued-tasks">0</p>
+        </article>
+        <article>
+          <p class="metric-label">Running tasks</p>
+          <p class="metric-value" id="metric-running-tasks">0</p>
+        </article>
+        <article>
+          <p class="metric-label">Completed tasks</p>
+          <p class="metric-value" id="metric-completed-tasks">0</p>
+        </article>
+        <article>
+          <p class="metric-label">Failed tasks</p>
+          <p class="metric-value" id="metric-failed-tasks">0</p>
         </article>
         <article>
           <p class="metric-label">Provider adapters</p>
@@ -59,7 +75,7 @@
       <section class="panel span-2">
         <div class="panel-head">
           <h2>Deploy New Swarm</h2>
-          <p>Create a ZeroClaw swarm with Automaton heartbeat modules and optional auto-adaptation.</p>
+          <p>Create a ZeroClaw swarm with Automaton heartbeat modules and task execution settings.</p>
         </div>
         <form id="swarm-form" class="swarm-form">
           <label>
@@ -89,6 +105,10 @@
           <label>
             Deploy target
             <input name="deployTarget" placeholder="local / cloud / edge" value="local" />
+          </label>
+          <label>
+            Deploy command (optional)
+            <input name="deployCommand" placeholder="npm run deploy" />
           </label>
           <label class="checkbox-field">
             <input name="autoAdapt" type="checkbox" checked />
@@ -129,18 +149,78 @@
         <div id="credential-list" class="list"></div>
       </section>
 
+      <section class="panel">
+        <div class="panel-head">
+          <h2>Task Composer</h2>
+          <p>Queue runnable tasks into any live swarm.</p>
+        </div>
+        <form id="task-form" class="stack-form">
+          <label>
+            Swarm
+            <select name="swarmId" id="task-swarm-select" required></select>
+          </label>
+          <label>
+            Task title
+            <input name="title" maxlength="140" placeholder="Publish changelog update" required />
+          </label>
+          <label>
+            Details
+            <input name="details" maxlength="220" placeholder="Scope, acceptance criteria, expected output" />
+          </label>
+          <label>
+            Execution mode
+            <select name="executionMode" id="task-mode-select">
+              <option value="simulate">simulate</option>
+              <option value="shell">shell</option>
+            </select>
+          </label>
+          <label id="task-command-row">
+            Shell command
+            <input name="command" placeholder="echo 'hello swarm'" />
+          </label>
+          <label>
+            Priority (1-5)
+            <input name="priority" type="number" min="1" max="5" value="3" />
+          </label>
+          <label>
+            Max attempts
+            <input name="maxAttempts" type="number" min="1" max="10" value="3" />
+          </label>
+          <label>
+            Timeout (ms)
+            <input name="timeoutMs" type="number" min="5000" max="600000" value="90000" />
+          </label>
+          <label>
+            Working directory (optional)
+            <input name="execCwd" placeholder="zeroclaw" />
+          </label>
+          <div class="row">
+            <button class="btn" type="submit">Queue task</button>
+            <button class="btn ghost" id="seed-tasks-button" type="button">Seed from objective</button>
+          </div>
+        </form>
+      </section>
+
       <section class="panel span-2">
         <div class="panel-head">
           <h2>Swarms</h2>
-          <p>Deploy, pause, and broadcast ideas to every agent in a swarm.</p>
+          <p>Deploy, pause, seed mission plans, and broadcast ideas.</p>
         </div>
         <div id="swarm-list" class="list"></div>
       </section>
 
       <section class="panel span-2">
         <div class="panel-head">
+          <h2>Task Queue</h2>
+          <p>Observe lifecycle and control retries/cancel for each task.</p>
+        </div>
+        <div id="task-list" class="list"></div>
+      </section>
+
+      <section class="panel span-2">
+        <div class="panel-head">
           <h2>Agents & Heartbeats</h2>
-          <p>Live agent pulse, obstacle recovery state, and credential binding.</p>
+          <p>Live pulse, obstacle recovery state, and credential binding.</p>
         </div>
         <div id="agent-list" class="list"></div>
       </section>
@@ -165,7 +245,7 @@
       <section class="panel span-3">
         <div class="panel-head">
           <h2>Activity Log</h2>
-          <p>Swarm events, heartbeat outcomes, obstacle mitigation, and idea relay.</p>
+          <p>Swarm events, task runs, heartbeat outcomes, and mitigation decisions.</p>
         </div>
         <div id="activity-list" class="log"></div>
       </section>
