--- a/public/index.html
+++ b/public/index.html
@@ -3,258 +3,134 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>anyre.quest | Autonomous Swarm Control</title>
+    <title>clawreform | Autonomous Swarm Operations</title>
+    <meta
+      name="description"
+      content="clawreform is the autonomous swarm operating layer for high-velocity execution across providers, models, and infrastructure."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=IBM+Plex+Mono:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700;800&family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/teaser.css" />
   </head>
   <body>
-    <div class="ambient"></div>
-    <header class="topbar">
-      <div>
-        <p class="eyebrow">anyre.quest</p>
-        <h1>ZeroClaw Swarm Orchestrator</h1>
+    <canvas id="star-canvas" aria-hidden="true"></canvas>
+    <div class="ambient-glow glow-a" aria-hidden="true"></div>
+    <div class="ambient-glow glow-b" aria-hidden="true"></div>
+
+    <header class="top-nav">
+      <div class="brand-mark">
+        <span class="logo-dot"></span>
+        <span>clawreform</span>
       </div>
-      <div class="topbar-actions">
-        <span class="chip" id="repo-status">Connecting...</span>
-        <button id="refresh-button" class="btn ghost" type="button">Refresh</button>
-      </div>
+      <nav class="top-links">
+        <a href="#waitlist">Waitlist</a>
+        <a href="#vision">Vision</a>
+        <a href="/dashboard">Dashboard</a>
+      </nav>
     </header>
 
-    <main class="grid">
-      <section class="panel metrics span-3" id="metrics-grid">
-        <article>
-          <p class="metric-label">Live swarms</p>
-          <p class="metric-value" id="metric-live-swarms">0</p>
-        </article>
-        <article>
-          <p class="metric-label">Active agents</p>
-          <p class="metric-value" id="metric-active-agents">0</p>
-        </article>
-        <article>
-          <p class="metric-label">Blocked agents</p>
-          <p class="metric-value" id="metric-blocked-agents">0</p>
-        </article>
-        <article>
-          <p class="metric-label">Queued tasks</p>
-          <p class="metric-value" id="metric-queued-tasks">0</p>
-        </article>
-        <article>
-          <p class="metric-label">Running tasks</p>
-          <p class="metric-value" id="metric-running-tasks">0</p>
-        </article>
-        <article>
-          <p class="metric-label">Completed tasks</p>
-          <p class="metric-value" id="metric-completed-tasks">0</p>
-        </article>
-        <article>
-          <p class="metric-label">Failed tasks</p>
-          <p class="metric-value" id="metric-failed-tasks">0</p>
-        </article>
-        <article>
-          <p class="metric-label">Provider adapters</p>
-          <p class="metric-value" id="metric-provider-count">0</p>
-        </article>
-      </section>
-
-      <section class="panel span-2">
-        <div class="panel-head">
-          <h2>Orchestrator Identity</h2>
-          <p>Rename the primary control node at runtime.</p>
-        </div>
-        <form id="orchestrator-form" class="inline-form">
-          <input id="orchestrator-name" name="name" maxlength="80" placeholder="Prime Orchestrator" required />
-          <button class="btn" type="submit">Rename</button>
-        </form>
-      </section>
-
-      <section class="panel span-2">
-        <div class="panel-head">
-          <h2>Deploy New Swarm</h2>
-          <p>Create a ZeroClaw swarm with Automaton heartbeat modules and task execution settings.</p>
-        </div>
-        <form id="swarm-form" class="swarm-form">
-          <label>
-            Swarm name
-            <input name="name" maxlength="80" placeholder="Revenue Ops Squad" required />
-          </label>
-          <label>
-            Objective
-            <input name="objective" maxlength="180" placeholder="Ship release notes, deploy docs, answer support queue" required />
-          </label>
-          <label>
-            Provider
-            <input name="provider" list="provider-suggestions" placeholder="openrouter" required />
-          </label>
-          <label>
-            Model
-            <input name="model" placeholder="openai/gpt-5-mini" required />
-          </label>
-          <label>
-            Agents
-            <input name="agentCount" type="number" min="1" max="24" value="4" required />
-          </label>
-          <label>
-            Heartbeat (ms)
-            <input name="heartbeatMs" type="number" min="2000" max="60000" value="8000" required />
-          </label>
-          <label>
-            Deploy target
-            <input name="deployTarget" placeholder="local / cloud / edge" value="local" />
-          </label>
-          <label>
-            Deploy command (optional)
-            <input name="deployCommand" placeholder="npm run deploy" />
-          </label>
-          <label class="checkbox-field">
-            <input name="autoAdapt" type="checkbox" checked />
-            Enable self-adaptation fallback path
-          </label>
-          <fieldset>
-            <legend>Automaton modules</legend>
-            <div id="module-options" class="module-options"></div>
-          </fieldset>
-          <button class="btn" type="submit">Create swarm</button>
-        </form>
-      </section>
-
-      <section class="panel">
-        <div class="panel-head">
-          <h2>Credential Profiles</h2>
-          <p>Store references only (for example env var names). Never raw secrets.</p>
-        </div>
-        <form id="credential-form" class="stack-form">
-          <label>
-            Label
-            <input name="label" maxlength="80" placeholder="Twitter Bot A" required />
-          </label>
-          <label>
-            Platform
-            <input name="platform" maxlength="80" placeholder="twitter" required />
-          </label>
-          <label>
-            Username
-            <input name="username" maxlength="80" placeholder="@agent_handle" required />
-          </label>
-          <label>
-            Secret ref
-            <input name="secretRef" maxlength="120" placeholder="TWITTER_AGENT_A_TOKEN" required />
-          </label>
-          <button class="btn" type="submit">Add profile</button>
-        </form>
-        <div id="credential-list" class="list"></div>
-      </section>
-
-      <section class="panel">
-        <div class="panel-head">
-          <h2>Task Composer</h2>
-          <p>Queue runnable tasks into any live swarm.</p>
-        </div>
-        <form id="task-form" class="stack-form">
-          <label>
-            Swarm
-            <select name="swarmId" id="task-swarm-select" required></select>
-          </label>
-          <label>
-            Task title
-            <input name="title" maxlength="140" placeholder="Publish changelog update" required />
-          </label>
-          <label>
-            Details
-            <input name="details" maxlength="220" placeholder="Scope, acceptance criteria, expected output" />
-          </label>
-          <label>
-            Execution mode
-            <select name="executionMode" id="task-mode-select">
-              <option value="simulate">simulate</option>
-              <option value="shell">shell</option>
-            </select>
-          </label>
-          <label id="task-command-row">
-            Shell command
-            <input name="command" placeholder="echo 'hello swarm'" />
-          </label>
-          <label>
-            Priority (1-5)
-            <input name="priority" type="number" min="1" max="5" value="3" />
-          </label>
-          <label>
-            Max attempts
-            <input name="maxAttempts" type="number" min="1" max="10" value="3" />
-          </label>
-          <label>
-            Timeout (ms)
-            <input name="timeoutMs" type="number" min="5000" max="600000" value="90000" />
-          </label>
-          <label>
-            Working directory (optional)
-            <input name="execCwd" placeholder="zeroclaw" />
-          </label>
-          <div class="row">
-            <button class="btn" type="submit">Queue task</button>
-            <button class="btn ghost" id="seed-tasks-button" type="button">Seed from objective</button>
+    <main>
+      <section class="hero" id="top">
+        <div class="hero-panel">
+          <p class="eyebrow">autonomous swarm operating system</p>
+          <h1>
+            Reform execution.
+            <span>Deploy focused AI swarms at operational speed.</span>
+          </h1>
+          <p class="hero-copy">
+            Run multi-agent missions across any model and any provider, adapt to obstacles in real time,
+            and ship outcomes continuously with heartbeat-driven autonomy.
+          </p>
+          <div class="cta-row">
+            <a href="#waitlist" class="btn primary">Join Early Access</a>
+            <a href="/dashboard" class="btn ghost">Open Mission Control</a>
           </div>
+          <div class="ticker" aria-hidden="true">
+            <span>dynamic provider routing</span>
+            <span>live heartbeat orchestration</span>
+            <span>adaptive fallback execution</span>
+            <span>credential-scoped autonomy</span>
+          </div>
+        </div>
+        <aside class="hero-stats">
+          <article>
+            <p class="stat-label">waitlist</p>
+            <p class="stat-value" id="waitlist-count">0</p>
+          </article>
+          <article>
+            <p class="stat-label">runtime</p>
+            <p class="stat-value" id="runtime-health">checking</p>
+          </article>
+          <article>
+            <p class="stat-label">focus</p>
+            <p class="stat-value">speed + accuracy</p>
+          </article>
+        </aside>
+      </section>
+
+      <section class="waitlist" id="waitlist">
+        <div class="section-heading">
+          <p class="eyebrow">early access</p>
+          <h2>Get on the clawreform waitlist</h2>
+          <p>
+            Reserve your access to the first production rollout and get onboarding details as soon as
+            private environments open.
+          </p>
+        </div>
+
+        <form id="waitlist-form" class="waitlist-form">
+          <label>
+            Email
+            <input type="email" name="email" autocomplete="email" placeholder="you@company.com" required />
+          </label>
+          <label>
+            Name
+            <input type="text" name="name" autocomplete="name" placeholder="Your name" />
+          </label>
+          <label>
+            Company
+            <input type="text" name="company" autocomplete="organization" placeholder="Company or team" />
+          </label>
+          <label>
+            Primary use case
+            <textarea
+              name="useCase"
+              rows="3"
+              maxlength="220"
+              placeholder="What should your first autonomous swarm handle?"
+            ></textarea>
+          </label>
+          <button class="btn primary" type="submit">Request invite</button>
+          <p id="waitlist-feedback" class="feedback" aria-live="polite"></p>
         </form>
       </section>
 
-      <section class="panel span-2">
-        <div class="panel-head">
-          <h2>Swarms</h2>
-          <p>Deploy, pause, seed mission plans, and broadcast ideas.</p>
+      <section class="vision" id="vision">
+        <div class="section-heading">
+          <p class="eyebrow">platform direction</p>
+          <h2>Built to turn ideas into outcomes</h2>
         </div>
-        <div id="swarm-list" class="list"></div>
-      </section>
-
-      <section class="panel span-2">
-        <div class="panel-head">
-          <h2>Task Queue</h2>
-          <p>Observe lifecycle and control retries/cancel for each task.</p>
+        <div class="vision-grid">
+          <article>
+            <h3>Provider freedom</h3>
+            <p>Route tasks across any provider/model pair without architecture lock-in.</p>
+          </article>
+          <article>
+            <h3>Autonomous resilience</h3>
+            <p>Heartbeat loops detect drift, recover from failures, and continue mission flow.</p>
+          </article>
+          <article>
+            <h3>Operational clarity</h3>
+            <p>Every agent action, fallback switch, and output is visible in one control plane.</p>
+          </article>
         </div>
-        <div id="task-list" class="list"></div>
-      </section>
-
-      <section class="panel span-2">
-        <div class="panel-head">
-          <h2>Agents & Heartbeats</h2>
-          <p>Live pulse, obstacle recovery state, and credential binding.</p>
-        </div>
-        <div id="agent-list" class="list"></div>
-      </section>
-
-      <section class="panel">
-        <div class="panel-head">
-          <h2>ZeroClaw Providers</h2>
-          <p id="provider-count-text">0 discovered</p>
-        </div>
-        <datalist id="provider-suggestions"></datalist>
-        <div id="provider-grid" class="chip-grid"></div>
-      </section>
-
-      <section class="panel">
-        <div class="panel-head">
-          <h2>Automaton Modules</h2>
-          <p>Sourced from local <code>automaton/src</code>.</p>
-        </div>
-        <div id="module-grid" class="module-grid"></div>
-      </section>
-
-      <section class="panel span-3">
-        <div class="panel-head">
-          <h2>Activity Log</h2>
-          <p>Swarm events, task runs, heartbeat outcomes, and mitigation decisions.</p>
-        </div>
-        <div id="activity-list" class="log"></div>
       </section>
     </main>
 
-    <template id="empty-template">
-      <p class="empty">Nothing here yet.</p>
-    </template>
-
-    <script type="module" src="/app.js"></script>
+    <script type="module" src="/teaser.js"></script>
   </body>
 </html>
