chore: add ae.ltd and aegntic.ai backlink credits

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -251,6 +251,15 @@
       </section>
     </main>
 
+    <footer class="page-credit">
+      <p>
+        Credits:
+        <a href="https://ae.ltd" target="_blank" rel="noopener">ae.ltd</a>
+        and
+        <a href="https://aegntic.ai" target="_blank" rel="noopener">aegntic.ai</a>
+      </p>
+    </footer>
+
     <template id="empty-template">
       <p class="empty">Nothing here yet.</p>
     </template>
