--- a/public/index.html
+++ b/public/index.html
@@ -129,6 +129,15 @@
           </article>
         </div>
       </section>
+
+      <footer class="site-attribution">
+        <p>
+          Credits:
+          <a href="https://ae.ltd" target="_blank" rel="noopener">ae.ltd</a>
+          and
+          <a href="https://aegntic.ai" target="_blank" rel="noopener">aegntic.ai</a>
+        </p>
+      </footer>
     </main>
 
     <script type="module" src="/teaser.js"></script>
