chore: apply ClawReform branding and subtle insider puns

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>clawreform | Autonomous Swarm Control</title>
+    <title>ClawReform | Autonomous Swarm Control</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +16,7 @@
     <div class="ambient"></div>
     <header class="topbar">
       <div>
-        <p class="eyebrow">clawreform</p>
+        <p class="eyebrow">ClawReform</p>
         <h1>ZeroClaw Swarm Orchestrator</h1>
       </div>
       <div class="topbar-actions">
@@ -257,6 +257,7 @@
         <a href="https://ae.ltd" target="_blank" rel="noopener">ae.ltd</a>
         and
         <a href="https://aegntic.ai" target="_blank" rel="noopener">aegntic.ai</a>
+        <span class="easter-inline" title="No chloroform, just ClawReform.">liquid solutions</span>
       </p>
     </footer>
 
