--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>clawreform | Edge Swarm Command</title>
+    <title>ClawReform | Edge Swarm Command</title>
     <meta
       name="description"
-      content="clawreform is the edge-native command experience for autonomous swarms. Build faster loops, adaptive heartbeats, and mission control that feels alive."
+      content="ClawReform is the edge-native command experience for autonomous swarms. Build faster loops, adaptive heartbeats, and mission control that feels alive."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,9 +23,9 @@
     <div class="ambient-vignette" aria-hidden="true"></div>
 
     <header class="top-nav">
-      <a class="brand-mark" href="#top" aria-label="clawreform home">
+      <a class="brand-mark" href="#top" aria-label="ClawReform home">
         <span class="logo-mark" aria-hidden="true"></span>
-        <span class="brand-text">clawreform</span>
+        <span class="brand-text">ClawReform</span>
       </a>
       <nav class="top-links">
         <a href="#command-model">Command Model</a>
@@ -45,7 +45,7 @@
             <span>Policy volatility becomes market momentum.</span>
           </h1>
           <p>
-            clawreform is built for the new reality: provider policy shifts, token constraints, and fragile single-path
+            ClawReform is built for the new reality: provider policy shifts, token constraints, and fragile single-path
             stacks. Heartbeat-aware swarms adapt across models and providers while mission loops stay live.
           </p>
           <div class="cta-row">
@@ -88,13 +88,13 @@
       <section class="difference" id="command-model">
         <div class="section-head reveal">
           <p class="eyebrow">Command Model</p>
-          <h2>clawreform sets the operating standard for live swarm command</h2>
+          <h2>ClawReform sets the operating standard for live swarm command</h2>
         </div>
         <div class="difference-grid reveal delay-1">
           <article class="delta-card card-tilt">
             <h3>Visual Ops as Core Discipline</h3>
             <p>
-              OpenClaw and ZeroClaw proved the category. clawreform formalizes the command layer so teams can
+              OpenClaw and ZeroClaw proved the category. ClawReform formalizes the command layer so teams can
               orchestrate, steer, and audit swarm behavior continuously.
             </p>
           </article>
@@ -118,14 +118,14 @@
       <section class="comparison" id="comparison">
         <div class="section-head reveal">
           <p class="eyebrow">Reality Check</p>
-          <h2>How clawreform compares to OpenClaw and ZeroClaw</h2>
+          <h2>How ClawReform compares to OpenClaw and ZeroClaw</h2>
           <p class="section-sub">
             Live repository metrics are fetched from GitHub on page load for transparent context.
           </p>
         </div>
 
         <div class="table-wrap reveal delay-1">
-          <table class="compare-table" aria-label="OpenClaw ZeroClaw clawreform comparison">
+          <table class="compare-table" aria-label="OpenClaw ZeroClaw ClawReform comparison">
             <thead>
               <tr>
                 <th>Metric</th>
@@ -138,7 +138,7 @@
                   <a href="https://github.com/openagen/zeroclaw" target="_blank" rel="noopener">source</a>
                 </th>
                 <th>
-                  clawreform
+                  ClawReform
                   <a href="https://github.com/aegntic/clawreform" target="_blank" rel="noopener">source</a>
                 </th>
               </tr>
@@ -208,7 +208,7 @@
           </p>
           <p class="table-note">
             Positioning note: public documentation indicates OpenClaw still supports Anthropic via API key/setup-token.
-            The pressure point is token policy volatility in third-party workflows, which clawreform is designed to absorb.
+            The pressure point is token policy volatility in third-party workflows, which ClawReform is designed to absorb.
           </p>
         </div>
       </section>
@@ -238,7 +238,7 @@
       <section class="waitlist" id="waitlist">
         <div class="section-head reveal">
           <p class="eyebrow">Early Access</p>
-          <h2>Get on the clawreform launch list</h2>
+          <h2>Get on the ClawReform launch list</h2>
           <p class="section-sub">
             We are rolling out private operator cohorts first. Share your use case and we will prioritize invites.
           </p>
@@ -283,6 +283,7 @@
           and
           <a href="https://github.com/Conway-Research/automaton" target="_blank" rel="noopener">Conway Automaton</a>.
         </p>
+        <p class="easter-ink" title="No chloroform, just ClawReform.">claw swarms re-formed. liquid solutions.</p>
       </footer>
     </main>
 
